# PEACE

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: BASELINE_ANALYSIS_README.md  BASELINE_README.md  DATASET_CONSTRUCTION_GUIDE.md  INFERENCE_GUIDE.md  PROTOTYPE_ANALYSIS_README.md  PROTOTYPE_RANKING_README.md  VALIDATION_GUIDE.md
notebooks/: fungus_inference_colab.ipynb
pretrained_models/fungus_model/: config.yml  metadata.yml
scripts/: run_inference.sh  run_validation.sh
scripts/benchmarking/: analyze_effectorP_predictions.py  rebuild_positive_sequence_provenance.sh
src/configs/: baseline_bce.yaml  prototype_single_stage.yaml  prototype_two_stage.yaml
src/data/dataset_construction/: README.md  combine_pos_and_neg_csv.py  combined90-75-60-50-40.clstr  combined_positives.csv  combined_positives_deduplicated.fasta  filter_negatives_by_similarity.py  positive_data_partition.py  process_cdhit_clusters.py  utils.py
src/effector_bincls/: __init__.py  checkpoints.py  cli.py  metrics.py  models.py  notebook_support.py  plotting.py  prototype_loading.py  prototype_scoring.py  run_utils.py
src/effector_bincls/analysis/: __init__.py  alignment.py  baseline.py  prototype.py
src/effector_bincls/data/: __init__.py  contracts.py  datasets.py  npz_migration.py  packed_embeddings.py
src/effector_bincls/evaluation/: __init__.py  (+4 more)
tests/smoke/: conftest.py  test_inference_compatibility.py  test_package_workflows.py  test_validation_wrapper.py
tests/unit/: test_cli.py  test_metrics.py  test_models.py  test_prototype_scoring.py  test_public_config_surface.py
(+37 files in other folders)
